# Organizer

./: .gitignore  CMakeLists.txt  README.md  app.js  main.js  package.json
configuration/: .gitignore  .gitignore.swp
js/: database.js
resources/: index.html
resources/pages/: helloworld.html  home.html  home.js  notes.css  notes.html  notes.js  settings.js
resources/script/: auth.js  controllers.js  drawer.js  init.js  layout.js
resources/script/lib/jquery/jqueryui/: jquery-ui.min.css  jquery-ui.theme.min.css
resources/stylesheets/: main.css  menu.css
source/: entry.cpp  entry.h  stringproc.cpp  stringproc.h
source/frontend/: index.html
source/frontend/script/jslib/: jquery.js
source/server/: http.cpp  http.h  httpserver.cpp  httpserver.h  httpserver_int.cpp  httpserver_int.h  tcp_socket.cpp  tcp_socket.h
src/: database.cpp  database.h  server.cpp
src/core/: filesystem.cpp  filesystem.h
src/server/: ApplicationServer.cpp  ApplicationServer.h  ConfigManager.cpp  ConfigManager.h  applicationserverhandlers.cpp  auto_mutex.h  configuration.cpp  configuration.h  core.cpp  core.h  defaults.h  entry.cpp  entry.h  http_internals.cpp  httpserver.cpp  httpserver.h  httpserverextrafunctions.cpp  httpserverextrafunctions.h  logger.cpp  logger.h  mimeserver.cpp  mimeserver.h  server.h  stringproc.cpp  stringproc.h  tcpserver.cpp  tcpserver.h
